Fix pagebreak support.

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
   </div>
 
   {% for article in articles %}
-    <div class="pagebreak"></div>
+    <mbp:pagebreak />
 
     <h2 id="ch{{ article.idx }}">
       <a href="{{ article.url }}">{{ article.title }}</a>
