--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
     {% endif %}
 
     {% if article.image %}
-      <img src="{{ article.idx }}.jpg">
+      <img src="{{ article.idx }}.jpg" width="50%">
     {% endif %}
 
     {{ article.body }}
