Try and fix the Table of Contents.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,12 @@
 <body>
   <h1>The Spectator ({{ date }})</h1>
 
+  <nav epub:type="landmarks" class="hidden-tag" hidden="hidden">
+    <ol>
+      <li><a epub:type="toc" href="toc.html">Table of Contents</a></li>
+    </ol>
+  </nav>
+
   <div id="toc">
     <ul>
       {% for key, group in grouped %}
