--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
       {% for key, group in grouped %}
       <li>
         {% if group|length == 1 %}
-          {% if key != group[0].title %}{{ key }}:{% endif %}
+          {% if key and key != group[0].title %}{{ key }}:{% endif %}
           {% for article in group %}
             <a href="#ch{{ article.idx }}">{{ article.title }}</a>
-            {% if article.author and article.author != article.category %}
+            {% if article.author and article.author != article.subsection %}
               ({{ article.author }})
             {% endif %}
           {% endfor %}
@@ -48,11 +48,11 @@
     <mbp:pagebreak />
 
     <h2 id="ch{{ article.idx }}">
-      {% if article.title != article.category and article.author != article.category %}{{ article.category }}: {% endif %}{{ article.title }}&nbsp;<a href="{{ article.url }}">&sect;</a>
+      {% if article.subsection and article.title != article.subsection and article.author != article.subsection %}{{ article.subsection }}: {% endif %}{{ article.title }}&nbsp;<a href="{{ article.url }}">&sect;</a>
     </h2>
 
-    {% if article.subtitle %}
-    <h3><em>{{ article.subtitle }}</em></h3>
+    {% if article.byline %}
+    <h3><em>{{ article.byline}}</em></h3>
     {% endif %}
 
     {% if article.author %}
